--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "CSS-only React spinners",
   "main": "index.js",
   "scripts": {
-    "format": "prettier --write \"*.js\""
+    "format": "prettier --write \"*.js\"",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,14 @@
   "devDependencies": {
     "eslint": "^7.24.0",
     "eslint-plugin-react": "^7.23.2",
+    "husky": "^6.0.0",
+    "lint-staged": "^10.5.4",
     "prettier": "^2.2.1"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
