--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,7 @@
 {
-  "semi": false
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "semi": true,
+  "singleQuote": true,
+  "arrowParens": "avoid"
 }
