--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "rollup -c",
-    "format": "prettier --write \"*.js\"",
+    "format": "prettier --write \"**/*.js\"",
     "prepare": "husky install"
   },
   "repository": {
