--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
   },
   "homepage": "https://github.com/sitek94/simple-react-spinners#readme",
   "devDependencies": {
+    "@babel/core": "^7.13.16",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
+    "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "eslint": "^7.24.0",
     "eslint-plugin-react": "^7.23.2",
@@ -31,7 +35,8 @@
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "rollup": "^2.45.2",
-    "rollup-plugin-clear": "^2.0.7"
+    "rollup-plugin-clear": "^2.0.7",
+    "rollup-plugin-terser": "^7.0.2"
   },
   "lint-staged": {
     "*.js": [
