--- a/package.json
+++ b/package.json
@@ -36,7 +36,14 @@
     "prettier": "^2.2.1",
     "rollup": "^2.45.2",
     "rollup-plugin-clear": "^2.0.7",
+    "rollup-plugin-string": "^3.0.0",
     "rollup-plugin-terser": "^7.0.2"
+  },
+  "peerDependencies": {
+    "react": ">=16.2"
+  },
+  "engines": {
+    "node": ">=10"
   },
   "lint-staged": {
     "*.js": [
