--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "build": "rollup -c",
     "format": "prettier --write \"**/*.js\"",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "storybook": "start-storybook -p 6006",
+    "storybook:build": "build-storybook"
   },
   "repository": {
     "type": "git",
@@ -31,6 +33,11 @@
     "@babel/preset-react": "^7.13.13",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/react": "^6.2.9",
+    "babel-loader": "^8.2.2",
     "eslint": "^7.24.0",
     "eslint-plugin-react": "^7.23.2",
     "husky": "^6.0.0",
@@ -52,5 +59,9 @@
       "eslint --fix",
       "prettier --write"
     ]
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
