add jest snapshot tests

--- a/.babelrc
+++ b/.babelrc
@@ -9,5 +9,10 @@
       }
     ],
     "@babel/react"
-  ]
+  ],
+  "env": {
+    "test": {
+      "presets": ["@babel/env", "@babel/react"]
+    }
+  }
 }
