--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:coveralls": "jest --coverage && coveralls < coverage/lcov.info",
     "test:staged": "jest --findRelatedTests"
   },
   "repository": {
@@ -44,6 +45,7 @@
     "@storybook/react": "^6.2.9",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
+    "coveralls": "^3.1.0",
     "eslint": "^7.24.0",
     "eslint-plugin-jest": "^24.3.5",
     "eslint-plugin-react": "^7.23.2",
