--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:coveralls": "jest --coverage && coveralls < coverage/lcov.info",
-    "test:staged": "jest --findRelatedTests"
+    "test:staged": "jest --findRelatedTests",
+    "predeploy": "npm run storybook:build",
+    "deploy": "gh-pages -d storybook-static"
   },
   "repository": {
     "type": "git",
@@ -32,7 +34,7 @@
   "bugs": {
     "url": "https://github.com/sitek94/simple-react-spinners/issues"
   },
-  "homepage": "https://github.com/sitek94/simple-react-spinners#readme",
+  "homepage": "https://github.com/sitek94/simple-react-spinners",
   "devDependencies": {
     "@babel/core": "^7.13.16",
     "@babel/preset-env": "^7.13.15",
@@ -49,6 +51,7 @@
     "eslint": "^7.24.0",
     "eslint-plugin-jest": "^24.3.5",
     "eslint-plugin-react": "^7.23.2",
+    "gh-pages": "^3.1.0",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
@@ -73,7 +76,7 @@
     ]
   },
   "dependencies": {
-    "react": "^17.0.2",
+    "react": ">=16.2",
     "react-dom": "^17.0.2"
   }
 }
